--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,13 @@
 cmake_minimum_required(VERSION 2.8)
 project(girl)
+include_directories ("${PROJECT_SOURCE_DIR}/lib")
+add_subdirectory(lib)
+add_executable(girl src/girl.cpp)
+install (TARGETS girl DESTINATION bin)
 
 set(Boost_USE_STATIC_LIBS ON)
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -Ilib")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
 find_package(Boost 1.58.0 COMPONENTS system filesystem program_options REQUIRED)
 if (Boost_FOUND)
-  add_executable(girl src/girl.cpp)
-  add_library(lib lib/location.cpp)
-  target_link_libraries(girl ${Boost_LIBRARIES} lib)
+  target_link_libraries(girl ${Boost_LIBRARIES} location)
 endif()
