--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 !.gitignore
 
 # cmake
-/CMakeCache.txt
-/CMakeFiles/
-/Makefile
-/cmake_install.cmake
+CMakeCache.txt
+CMakeFiles/
+Makefile
+cmake_install.cmake
 /girl
