--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,13 @@ project(girl)
 include_directories ("${PROJECT_SOURCE_DIR}/lib")
 add_subdirectory(lib)
 add_executable(girl src/girl.cpp)
-install (TARGETS girl DESTINATION bin)
+add_executable(girl-ls src/girl-ls.cpp)
+install (TARGETS girl girl-ls DESTINATION bin)
 
 set(Boost_USE_STATIC_LIBS ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
 find_package(Boost 1.58.0 COMPONENTS system filesystem program_options REQUIRED)
 if (Boost_FOUND)
-  target_link_libraries(girl ${Boost_LIBRARIES} location)
+  target_link_libraries(girl ${Boost_LIBRARIES} location hogehoge)
+  target_link_libraries(girl-ls ${Boost_LIBRARIES} location hogehoge)
 endif()
