--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,6 @@ set(Boost_USE_STATIC_LIBS ON)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
 find_package(Boost 1.58.0 COMPONENTS system filesystem program_options REQUIRED)
 if (Boost_FOUND)
-  target_link_libraries(girl ${Boost_LIBRARIES} location hogehoge)
-  target_link_libraries(girl-ls ${Boost_LIBRARIES} location hogehoge)
+  target_link_libraries(girl ${Boost_LIBRARIES} location utils)
+  target_link_libraries(girl-ls ${Boost_LIBRARIES} location utils)
 endif()
