--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ addons:
     - ubuntu-toolchain-r-test
     packages:
     - g++-4.8
+    - libboost-dev
 install:
   - if [ "$CXX" = "g++" ]; then
        export CXX="g++-4.8";
