--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,10 @@ addons:
   apt:
     sources:
     - ubuntu-toolchain-r-test
+    - boost-latest
     packages:
     - g++-4.8
-    - libboost-all-dev
+    - boost1.55
 install:
   - if [ "$CXX" = "g++" ]; then
        export CXX="g++-4.8";
