--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable(girl src/girl.cpp)
 install (TARGETS girl DESTINATION bin)
 
 set(Boost_USE_STATIC_LIBS ON)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++11")
 find_package(Boost 1.58.0 COMPONENTS system filesystem program_options REQUIRED)
 
 message("Boost include dir:               " ${Boost_INCLUDE_DIR})
