--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ compiler:
 before_install:
   - sudo add-apt-repository ppa:afrank/boost -y
   - sudo apt-get update -q
-  - sudo apt-get install libboost1.57-all
+  - sudo apt-get install libboost1.57-all libboost1.57-all-dev
 addons:
   apt:
     sources:
