--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ compiler:
   - gcc-5
   - clang
 before_install:
-  - sudo add-apt-repository ppa:afrank/boost -y
+  - sudo add-apt-repository ppa:apw/boost -y
   - sudo apt-get update -q
-  - sudo apt-get install libboost1.57-all libboost1.57-all-dev
+  - sudo apt-get install boost1.58
 addons:
   apt:
     sources:
