--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ compiler:
   - gcc-5
   - clang
 before_install:
-  - sudo add-apt-repository ppa:kzemek/boost -y
+  - sudo add-apt-repository ppa:ostogvin/tjo-develop -y
   - sudo apt-get update -q
   - sudo apt-get install boost1.58
 addons:
