--- a/.travis.yml
+++ b/.travis.yml
@@ -2,22 +2,22 @@ sudo: required
 dist: trusty
 language: cpp
 compiler:
-  - gcc-5
-  - clang-3.6
+  - gcc-4.9
+  - clang-3.5
 before_install:
   - sudo add-apt-repository ppa:afrank/boost -y
   - sudo apt-get update -q
-  - sudo apt-get install g++-5 clang-3.6 libstdc++-5 libboost1.57-all-dev
+  - sudo apt-get install g++-4.9 clang-3.5 libclang-3.5-dev libgcc-4.8-dev libstdc++-4.8 libboost1.57-all-dev
 addons:
   apt:
     sources:
     - ubuntu-toolchain-r-test
 script:
   - if [ "$CXX" = "g++" ]; then
-       export CXX="g++-5";
+       export CXX="g++-4.9";
     fi
   - if [ "$CXX" = "clang++" ]; then
-       export CXX="clang++-3.6";
+       export CXX="clang++-3.5";
     fi
   - $CXX --version
   - mkdir build
